--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chelsea FC's Wins & Losses</title>
+  <title>Chelsea FC's Wins & Losses for 2010-2020</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <style>
     body {
@@ -153,139 +153,3 @@
 </body>
 </html>
 
-
-    .percentage {
-      font-size: 64px;
-      font-weight: 700;
-      color: #2196f3;
-    }
-
-    .percentage-label {
-      font-size: 16px;
-      color: #555;
-      max-width: 200px;
-      margin: 0 auto;
-    }
-
-    .bar-label {
-      fill: white;
-      font-weight: bold;
-      text-anchor: middle;
-      alignment-baseline: middle;
-    }
-
-    .x-axis text {
-      font-size: 14px;
-      fill: #333;
-    }
-  </style>
-</head>
-<body>
-
-  <h3>The proof is in the pudding. Check it out.</h3>
-
-  <div class="chart-container">
-    <div id="chart"></div>
-    <div style="margin-left: 60px;">
-      <div class="percentage" id="percent-change">--%</div>
-      <div class="percentage-label" id="percent-label">
-        <!-- Filled in dynamically -->
-      </div>
-    </div>
-  </div>
-
-  <script>
-    const data = [
-      {"year": 2010, "points": 86, "wins": 27},
-      {"year": 2011, "points": 71, "wins": 21},
-      {"year": 2012, "points": 64, "wins": 18},
-      {"year": 2013, "points": 75, "wins": 22},
-      {"year": 2014, "points": 82, "wins": 25},
-      {"year": 2015, "points": 87, "wins": 26},
-      {"year": 2016, "points": 50, "wins": 12},
-      {"year": 2017, "points": 93, "wins": 30},
-      {"year": 2018, "points": 70, "wins": 21},
-      {"year": 2019, "points": 72, "wins": 21},
-      {"year": 2020, "points": 5, "wins": 1}
-    ];
-
-    const margin = { top: 30, right: 20, bottom: 40, left: 40 };
-    const width = 600 - margin.left - margin.right;
-    const height = 400 - margin.top - margin.bottom;
-
-    const svg = d3.select("#chart")
-      .append("svg")
-      .attr("width", width + margin.left + margin.right)
-      .attr("height", height + margin.top + margin.bottom)
-      .append("g")
-      .attr("transform", `translate(${margin.left},${margin.top})`);
-
-    const x = d3.scaleBand()
-      .domain(data.map(d => d.year))
-      .range([0, width])
-      .padding(0.3);
-
-    const y = d3.scaleLinear()
-      .domain([0, d3.max(data, d => d.wins) + 5])
-      .range([height, 0]);
-
-    const colorScale = d3.scaleLinear()
-      .domain([d3.min(data, d => d.wins), d3.max(data, d => d.wins)])
-      .range(["#1976d2", "#64b5f6"]);
-
-    // Draw bars
-    svg.selectAll(".bar")
-      .data(data)
-      .enter()
-      .append("rect")
-      .attr("x", d => x(d.year))
-      .attr("y", d => y(d.wins))
-      .attr("width", x.bandwidth())
-      .attr("height", d => height - y(d.wins))
-      .attr("fill", d => colorScale(d.wins))
-      .attr("rx", 5)
-      .attr("ry", 5);
-
-    // Add circles on top
-    svg.selectAll("circle")
-      .data(data)
-      .enter()
-      .append("circle")
-      .attr("cx", d => x(d.year) + x.bandwidth() / 2)
-      .attr("cy", d => y(d.wins))
-      .attr("r", 18)
-      .attr("fill", "white")
-      .attr("stroke", "#1976d2")
-      .attr("stroke-width", 2);
-
-    // Add win numbers in the circles
-    svg.selectAll(".bar-label")
-      .data(data)
-      .enter()
-      .append("text")
-      .attr("x", d => x(d.year) + x.bandwidth() / 2)
-      .attr("y", d => y(d.wins))
-      .attr("dy", ".35em")
-      .attr("class", "bar-label")
-      .text(d => d.wins);
-
-    // Add x-axis labels
-    svg.append("g")
-      .attr("class", "x-axis")
-      .attr("transform", `translate(0, ${height})`)
-      .call(d3.axisBottom(x).tickFormat(d => `'${String(d).slice(2)}`)); // format to '10, '11...
-
-    // Percentage increase callout
-    const last = data[data.length - 1].wins;
-    const prev = data[data.length - 2].wins;
-    const percent = ((last - prev) / prev * 100).toFixed(0);
-
-    const percentText = percent > 0 ? `We've seen an increase of ${percent}% in ${data[data.length - 1].year} over ${data[data.length - 2].year}—attributed to improved performance.` :
-                         `We've seen a decrease of ${Math.abs(percent)}% in ${data[data.length - 1].year} over ${data[data.length - 2].year}.`;
-
-    d3.select("#percent-change").text(`${percent}%`);
-    d3.select("#percent-label").text(percentText);
-  </script>
-
-</body>
-</html>
