--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
 
-  <h2>Chelsea FC's Wins & Losses</h2>
+  <h2>Chelsea FC's Wins & Losses for 2010-2020</h2>
   <div id="chart"></div>
 
   <script>
